--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -98,6 +98,11 @@ main {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
 
+#rtaMap {
+    height: 95%;
+    width: 100%;
+}
+
 /* =========================================== */
 /* RIGHT */
 /* =========================================== */
