--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -9,9 +9,13 @@
 
   
 /* =========================================== */
-/* GLOBAL VARIABLES*/
+/* COLORES */
 /* =========================================== */
 :root {
+    --color_1: #26292B;
+    --color_2: #2E3239;
+    --color_3: #5F7ADB;
+    --color_4: #A2B2EE;
     --color_white: #FFFFFF;
     --color_lightGray1: #F1F5FB;
     --color_lightGray2: #DBDDE3;
@@ -23,6 +27,87 @@
 }
 
 /* =========================================== */
+/* FUENTES */
+/* =========================================== */
+
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 400;
+    src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAUi-qNiXg7eU0.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 400;
+    src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAXC-qNiXg7Q.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 700;
+    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_FQftx9897sxZ.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 700;
+    src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_Gwftx9897g.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwaPGQ3q5d0N7w.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+heading {
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 24px;
+}
+
+subheading {
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+
+
+/* =========================================== */
 /* GENERAL*/
 /* =========================================== */
 * {
@@ -30,17 +115,28 @@
     margin: 0%;
 }
 
+body,
+td,
+th,
+tr,
+p,
+a {
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-size: 16px;
+}
 
 body {
-    font-family: monospace, sans-serif;
+    font-family: 'Lato', Verdana, Helvetica, sans-serif;
     font-size: 18px;
+    color: var(--color_white);
+    background-color: var(--color_1);
 }
 
 /* =========================================== */
 /* HEADER */
 /* =========================================== */
 header{
-    background-color: var(--color_lightGray1);
+    background-color: var(--color_2);
 
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -101,6 +197,7 @@ main {
 #rtaMap {
     height: 95%;
     width: 100%;
+    border-radius: 15px;
 }
 
 /* =========================================== */
@@ -166,13 +263,13 @@ td {
     height: 240px;
     width: 240px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: var(--color_1);
 }
 .battery-value{
     position: relative;
     font-size: 40px;
     font-weight: 600;
-    color: var(--color_DarkGray2);
+    color: var(--color_white);
 }
 
 .battery-container > .text{
@@ -216,14 +313,14 @@ td {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: var(--color_1);
 }
 
 .current-value{
     position: relative;
     font-size: 25px;
     font-weight: 600;
-    color: var(--color_DarkGray2);
+    color: var(--color_white);
 }
 
 .current-container > .text{
